k8s/iron-proxy.yaml
apiVersion: v1
kind: Service
metadata:
  name: iron-proxy
  namespace: anyeval-sandbox
  labels: &id001
    anyeval.io/role: egress-proxy
spec:
  type: ClusterIP
  clusterIP: 34.118.229.224
  selector: *id001
  ports:
  - name: tunnel
    port: 8080
    targetPort: 8080
    protocol: TCP
  - name: dns-udp
    port: 53
    targetPort: 53
    protocol: UDP
  - name: dns-tcp
    port: 53
    targetPort: 53
    protocol: TCP
